// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EventTileBubble > renders the event tile bubble 1`] = `
<div>
  <div
    class="mx_EventTileBubble container custom-class"
  >
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
  </div>
</div>
`;

exports[`EventTileBubble > renders the event tile bubble as crypto event bubble 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="title"
    >
      Encryption enabled
    </div>
    <div
      class="subtitle"
    >
      Messages here are end-to-end encrypted. Verify XYZ in their profile - tap on their profile picture.
    </div>
  </div>
</div>
`;

exports[`EventTileBubble > renders the event tile bubble with children 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
    <div>
      children
    </div>
  </div>
</div>
`;

exports[`EventTileBubble > renders the event tile bubble with icon 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
  </div>
</div>
`;

exports[`EventTileBubble > renders the event tile bubble with timestamp 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
    <div>
      timestamp
    </div>
  </div>
</div>
`;

exports[`EventTileBubble > renders the event tile bubble with timestamp and children 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
    <div>
      children
    </div>
    <div>
      timestamp
    </div>
  </div>
</div>
`;

exports[`EventTileBubble renders the event tile bubble 1`] = `
<div>
  <div
    class="mx_EventTileBubble container custom-class"
  >
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
  </div>
</div>
`;

exports[`EventTileBubble renders the event tile bubble as crypto event bubble 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="title"
    >
      Encryption enabled
    </div>
    <div
      class="subtitle"
    >
      Messages here are end-to-end encrypted. Verify XYZ in their profile - tap on their profile picture.
    </div>
  </div>
</div>
`;

exports[`EventTileBubble renders the event tile bubble with children 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
    <div>
      children
    </div>
  </div>
</div>
`;

exports[`EventTileBubble renders the event tile bubble with icon 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
  </div>
</div>
`;

exports[`EventTileBubble renders the event tile bubble with timestamp 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
    <div>
      timestamp
    </div>
  </div>
</div>
`;

exports[`EventTileBubble renders the event tile bubble with timestamp and children 1`] = `
<div>
  <div
    class="mx_EventTileBubble container"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="title"
    >
      Title goes here
    </div>
    <div
      class="subtitle"
    >
      Subtitle goes here
    </div>
    <div>
      children
    </div>
    <div>
      timestamp
    </div>
  </div>
</div>
`;
